--- a/pyproject.toml
+++ b/pyproject.toml
@@ -329,7 +329,7 @@ ignore = [
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "weblate.settings_test"
-# TODO: enable FAIL_INVALID_TEMPLATE_VARS = true
+FAIL_INVALID_TEMPLATE_VARS = true
 addopts = "--reuse-db --cov=weblate --cov-report="
 python_files = ["test_*.py", "tests.py"]
 
