--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
   "cssselect>=1.2,<1.3",
   "Cython>=3.0.0,<3.1",
   "cyrtranslit>=1.1.0,<1.2.0",
+  "dateparser>=1.2.0,<1.3.0",
   "diff-match-patch==20230430",
   "django-appconf>=1.0.3,<1.1",
   "django-celery-beat>=2.6.0,<2.8",
