Migrate jQuery to new build workflow
# Changes
## Migrated jQuery to new workflow
- Managed in `client/`.
- and built into `static/js/main.js`
- then included in `base.html` template

## Removed jQuery from the old workflow from
- `scripts/yarn/package.json`
- `scripts/yarn-update`
- `template/base.html`

## Updated docs
Modifictions in `/docs/contributing/frontend.rst` including wording, steps, and requirements.

Related: #12490

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client-3rd-party",
+  "name": "weblate-client-libs",
   "version": "0.0.1",
   "description": "Used to manage 3rd party libraries for the  client side.",
   "license": "GPL-3.0-or-later",
@@ -7,6 +7,7 @@
     "build": "webpack"
   },
   "dependencies": {
+    "jquery": "3.7.1",
     "@sentry/browser": "8.30.0"
   },
   "devDependencies": {
