--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,9 +25,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: astral-sh/setup-uv@v3
-      with:
-        enable-cache: true
-        cache-dependency-glob: docs/requirements.txt
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
@@ -58,14 +55,13 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.12'
-        cache-dependency-path: docs/requirements.txt
+    - uses: astral-sh/setup-uv@v3
     - name: Install apt dependencies
       run: |
         sudo apt update
         sudo apt install -y graphviz
     - name: Install Python dependencies
       run: |
-        pip install uv
         uv pip install --system -r docs/requirements.txt
     - name: Sphinx linkcheck
       run: |
