chore(ci): separate uv cache per Python version
It doesn't make sense share the cache of complied wheels becuase these
are version specific.

See also https://github.com/astral-sh/uv/issues/7543

--- a/.github/workflows/migrations.yml
+++ b/.github/workflows/migrations.yml
@@ -44,7 +44,8 @@ jobs:
       with:
         enable-cache: true
         cache-dependency-glob: pyproject.toml
-    - name: Set up Python 3.11
+        cache-suffix: '3.12'
+    - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.12'
