--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -27,6 +27,7 @@ jobs:
       with:
         enable-cache: true
         cache-dependency-glob: pyproject.toml
+        cache-suffix: '3.12'
     - name: Setup Python
       uses: actions/setup-python@v5
       with:
