--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -33,6 +33,7 @@ jobs:
       with:
         enable-cache: true
         cache-dependency-glob: pyproject.toml
+        cache-suffix: '3.12'
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
@@ -72,6 +73,7 @@ jobs:
       with:
         enable-cache: true
         cache-dependency-glob: pyproject.toml
+        cache-suffix: '3.12'
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
