--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -35,6 +35,7 @@ jobs:
       with:
         enable-cache: true
         cache-dependency-glob: pyproject.toml
+        cache-suffix: '3.12'
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
