--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "@sentry/browser": "8.30.0"
   },
   "devDependencies": {
-    "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4"
+    "webpack": "5.93.0",
+    "webpack-cli": "5.1.4"
   }
 }
