--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "@sentry/browser": "8.30.0"
   },
   "devDependencies": {
+    "terser-webpack-plugin": "5.3.10",
     "webpack": "5.94.0",
-    "webpack-cli": "5.1.4"
+    "webpack-cli": "5.1.4",
+    "webpack-license-plugin": "4.5.0"
   }
 }
