chore(ci): specify blank cache-dependency-glob

--- a/.github/workflows/migrations.yml
+++ b/.github/workflows/migrations.yml
@@ -43,6 +43,7 @@ jobs:
     - uses: astral-sh/setup-uv@v3
       with:
         enable-cache: true
+        cache-dependency-glob: ''
         cache-suffix: '3.12'
     - name: Set up Python
       uses: actions/setup-python@v5
