--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,6 +51,11 @@ jobs:
           requirements: edge
           database: postgresql
           experimental: true
+        # Python pre-release
+        - python-version: '3.13'
+          requirements: latest
+          database: postgresql
+          experimental: true
     name: py${{ matrix.python-version }}, ${{ matrix.database }}, ${{ matrix.requirements }} deps
     env:
       CI_DATABASE: ${{ matrix.database }}
@@ -78,6 +83,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        allow-prereleases: true
     - name: Used versions
       run: ./ci/print-versions
     - name: Install Python dependencies
