--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,8 +124,7 @@ dev = [
   "PyICU==2.13.1",
   "reuse==4.0.3",
   "scour==0.38.2",
-  "tinyunicodeblock==1.3",
-  "tomli"
+  "tinyunicodeblock==1.3"
 ]
 gerrit = [
   "git-review>=2.4.0,<2.5.0"
