--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ dependencies = [
   "django-otp-webauthn>=0.3.0,<0.4",
   "Django[argon2]>=5.0,<5.2",
   "djangorestframework>=3.15.2,<3.16",
+  "drf-spectacular[sidecar]>=0.27.2,<0.28",
   "filelock<4,>=3.12.2",
   "fluent.syntax>=0.18.1,<0.20",
   "GitPython>=3.1.0,<3.2",
