chore(ci): run fossa action only on our repo
It needs key and fails without it.

--- a/.github/workflows/fossa.yml
+++ b/.github/workflows/fossa.yml
@@ -15,6 +15,7 @@ permissions:
 jobs:
   fossa-scan:
     runs-on: ubuntu-latest
+    if: ${{ github.repository == 'WeblateOrg/weblate' }}
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
