--- a/ci/docker-compose-postgresql.yml
+++ b/ci/docker-compose-postgresql.yml
@@ -8,7 +8,7 @@ services:
     ports:
     - 60000:5432
     # make postgres faster and non-durable, see https://www.postgresql.org/docs/current/non-durability.html
-    command: [postgres, -c, fsync=off, -c, synchronous_commit=off, -c, full_page_writes=off, -c, checkpoint_timeout=3600, -c, max_wal_size=4096]
+    command: [postgres, -c, fsync=off, -c, synchronous_commit=off, -c, full_page_writes=off, -c, checkpoint_timeout=7200, -c, wal_level=minimal]
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: weblate
