--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,6 +56,10 @@ repos:
     - mdformat-ruff==0.1.3
     - mdformat-shfmt==0.1.0
     - mdformat_tables==1.0.0
+- repo: https://github.com/scop/pre-commit-shfmt
+  rev: v3.9.0-1
+  hooks:
+  - id: shfmt
 - repo: https://github.com/awebdeveloper/pre-commit-stylelint
   rev: 0.0.2
   hooks:
