fix(ci): do not use grep without matches
It will fail with exit code 1 making the action fail.

--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -65,8 +65,8 @@ jobs:
       if: always()
       run: |
         echo "::add-matcher::.github/matchers/mypy.json"
-        if [ -f changed-files.txt ] ; then
-          grep -F -f changed-files.txt mypy.log
+        if [ -f changed-files.txt ] && grep --silent --fixed-strings --file=changed-files.txt mypy.log ; then
+          grep --fixed-strings --file=changed-files.txt mypy.log
         else
           cat mypy.log
         fi
