--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -34,14 +34,11 @@ jobs:
       env:
         ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
       run: |
+        touch changed-files.txt
         for file in ${ALL_CHANGED_FILES}; do
           echo "$file" >> changed-files.txt
         done
-        if [ ! -f changed-files.txt ] ; then
-          echo "No changed files!"
-        else
-          cat changed-files.txt
-        fi
+        cat changed-files.txt
 
     - name: Install apt dependencies
       run: sudo ./ci/apt-install
@@ -65,8 +62,10 @@ jobs:
       if: always()
       run: |
         echo "::add-matcher::.github/matchers/mypy.json"
-        if [ -f changed-files.txt ] && grep --silent --fixed-strings --file=changed-files.txt mypy.log ; then
-          grep --fixed-strings --file=changed-files.txt mypy.log
+        if [ -f changed-files.txt ] ; then
+          if grep --silent --fixed-strings --file=changed-files.txt mypy.log ; then
+            grep --fixed-strings --file=changed-files.txt mypy.log
+          fi
         else
           cat mypy.log
         fi
