chore(ci): exclude non-API DRF endpoints from API lint

--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -56,7 +56,7 @@ jobs:
     - name: Generate OpenAPI
       run: |
         echo "::add-matcher::.github/matchers/spectacular.json"
-        ./manage.py spectacular > weblate-openapi.yaml
+        ./manage.py spectacular --urlconf="weblate.api.urls" > weblate-openapi.yaml
         echo "::remove-matcher owner=spectacular::"
     - name: openapi-lint
       run: npx @redocly/cli lint --format github-actions weblate-openapi.yaml
