fix(ci): uninstall Python 3.13 on macos
The binary wheels are not yet ready and we do not install all the build deps.

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -32,6 +32,7 @@ jobs:
     - name: Fix Python
       # Workaround for https://github.com/actions/setup-python/issues/577
       run: |
+        brew uninstall --ignore-dependencies python@3.13
         brew uninstall --ignore-dependencies python@3.11
         brew unlink python@3.12
         rm -f /usr/local/bin/{2to3,idle3,pydoc3,python3,python3-config}
