--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "@sentry/browser": "8.33.1",
-    "jquery": "3.7.1"
+    "jquery": "3.7.1",
+    "tributejs": "5.1.3"
   },
   "devDependencies": {
     "terser-webpack-plugin": "5.3.10",
