--- a/scripts/yarn/package.json
+++ b/scripts/yarn/package.json
@@ -13,7 +13,6 @@
     "prismjs": "1.29.0",
     "slugify": "1.6.6",
     "source-code-pro": "2.38.0",
-    "source-sans": "3.46.0",
-    "tributejs": "5.1.3"
+    "source-sans": "3.46.0"
   }
 }
