chore: fix some type annotation issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -291,7 +291,9 @@ module = [
   "djangosaml2idp.*",
   "debug_toolbar.*",
   "weblate_schemas.*",
-  "django.db.backends.postgresql.psycopg_any"
+  "django.db.backends.postgresql.psycopg_any",
+  "django_otp.*",
+  "django_otp_webauthn.*"
 ]
 
 [tool.pylint.main]
