--- a/dev-docker/weblate-dev/Dockerfile
+++ b/dev-docker/weblate-dev/Dockerfile
@@ -53,6 +53,6 @@ RUN apt-get update && apt-get install -y \
 RUN apt-get install -y gir1.2-rsvg-2.0
 
 COPY requirements.txt /tmp/
-RUN . /app/venv/bin/activate && uv pip install -r /tmp/requirements.txt
+RUN source /app/venv/bin/activate && uv pip install -r /tmp/requirements.txt
 # List should match weblate/weblate
 RUN chown -R "${USER_ID}:${GROUP_ID}" /etc/nginx/sites-available/ /var/log/nginx/ /var/lib/nginx /app/data /app/cache /run /home/weblate /etc/localtime /etc/supervisor/conf.d /tmp/localtime
