--- a/.github/workflows/migrations.yml
+++ b/.github/workflows/migrations.yml
@@ -69,6 +69,8 @@ jobs:
       run: ./ci/run-migrate 5.6
     - name: Migrate from 5.7
       run: ./ci/run-migrate 5.7
+    - name: Migrate from 5.8
+      run: ./ci/run-migrate 5.8
     - name: Coverage
       run: |
         coverage combine
