--- a/pyproject.toml
+++ b/pyproject.toml
@@ -150,6 +150,7 @@ mypy = [
   "djangorestframework-stubs==3.15.1",
   "types-lxml==2024.9.16",
   "mypy==1.12.0",
+  "types-dateparser==1.2.0.20240420",
   "types-jsonschema==4.23.0.20240813",
   "types-openpyxl==3.1.5.20240918",
   "types-Pillow==10.2.0.20240822",
@@ -293,7 +294,8 @@ module = [
   "weblate_schemas.*",
   "django.db.backends.postgresql.psycopg_any",
   "django_otp.*",
-  "django_otp_webauthn.*"
+  "django_otp_webauthn.*",
+  "qrcode.*"
 ]
 
 [tool.pylint.main]
