--- a/.github/workflows/migrations.yml
+++ b/.github/workflows/migrations.yml
@@ -50,7 +50,7 @@ jobs:
       with:
         python-version: '3.12'
     - name: Install Python dependencies
-      run: ./ci/pip-install migrations
+      run: ./ci/pip-install latest
     - name: Check missing migrations
       run: ./ci/run-checkmigrate
     - name: Migrate from 5.0
