--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,11 +114,8 @@ amazon = [
 antispam = [
   "python-akismet>=0.4.2,<0.5"
 ]
-ci = [
-  "coverage==7.6.3",
-]
 dev = [
-  "weblate[all,ci,test,lint,mypy]",
+  "weblate[all,test,lint,mypy]",
   "django-debug-toolbar==4.4.6",
   "PyICU==2.13.1",
   "reuse==4.0.3",
@@ -169,6 +166,7 @@ saml = [
   "python3-saml>=1.2.1"
 ]
 test = [
+  "coverage==7.6.3",
   "pytest==8.3.3",
   "pytest-cov==5.0.0",
   "pytest-django==4.9.0",
