chore(dist): update manifest and add check-manifest
- remove docs completely from dist, it was included partially and nobody
  noticed it, so it is not needed to be shipped

--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -146,6 +146,8 @@ jobs:
       run: uvx pyroma dist/*.tar.gz
     - name: check-wheel-contents
       run: uvx check-wheel-contents dist/*.whl
+    - name: check-manifest
+      run: uvx check-manifest -v
 
   notes:
     runs-on: ubuntu-24.04
