--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -138,6 +138,10 @@ jobs:
     - name: Cleanup dist
       # Remove files not supported on PyPI (eg. Sigstore signatures)
       run: find dist -mindepth 1 -not -name '*.tar.gz' -not -name '*.whl' -delete
+    - name: list wheel
+      run: unzip -l dist/*.whl
+    - name: list sdist
+      run: tar tvf dist/*.tar.gz
     - name: twine check
       run: uvx twine check --strict dist/*
     - name: pydistcheck
