fix: ignore .well-known from manifest check

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -196,6 +196,7 @@ Twitter = "https://twitter.com/WeblateOrg"
 
 [tool.check-manifest]
 ignore = [
+  ".well-known/*",
   ".gitmodules",
   "scripts/*",
   "scripts/*/*",
