chore: djlint formatting setup

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -279,6 +279,10 @@ strict_settings = false
 [tool.djlint]
 blank_line_after_tag = "load,extends,endblock"
 indent = 2
+max_attribute_length = 80
+max_blank_lines = 2
+preserve_blank_lines = true
+profile = "django"
 
 [tool.mypy]
 check_untyped_defs = true
