feat(lint): introduce djlint

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -87,6 +87,10 @@ repos:
   rev: v0.21
   hooks:
   - id: validate-pyproject
+- repo: https://github.com/djlint/djLint
+  rev: v1.35.2
+  hooks:
+  - id: djlint-django
 - repo: https://github.com/codespell-project/codespell
   rev: v2.3.0
   hooks:
