chore(html): use lowercase form method values

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -280,7 +280,6 @@ strict_settings = false
 blank_line_after_tag = "load,extends,endblock"
 # - reconsider T032 and H014 once formatter is in use
 # T003 - Endblock should have name.
-# H029 - Consider using lowercase form method values.
 # H023 - Do not use entity references.
 # T001 - Variables should be wrapped in a whitespace.
 # H025 - Tag seems to be an orphan.
@@ -290,7 +289,7 @@ blank_line_after_tag = "load,extends,endblock"
 # H021 - Inline styles should be avoided.
 # H031 - Consider adding meta keywords.
 # H020 - Empty tag pair found. Consider removing.
-ignore = "T003,H014,T032,T002,H029,H023,H013,T001,H025,H006,H021,H031,H020"
+ignore = "T003,H014,T032,T002,H023,H013,T001,H025,H006,H021,H031,H020"
 indent = 2
 max_attribute_length = 80
 max_blank_lines = 2
