chore(html): annotate use of empty tag pair

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -287,8 +287,7 @@ blank_line_after_tag = "load,extends,endblock"
 # H006 - Img tag should have height and width attributes.
 # H021 - Inline styles should be avoided.
 # H031 - Consider adding meta keywords.
-# H020 - Empty tag pair found. Consider removing.
-ignore = "T003,H014,T032,T002,H013,T001,H025,H006,H021,H031,H020"
+ignore = "T003,H014,T032,T002,H013,T001,H025,H006,H021,H031"
 indent = 2
 max_attribute_length = 80
 max_blank_lines = 2
