--- a/pyproject.toml
+++ b/pyproject.toml
@@ -281,13 +281,12 @@ blank_line_after_tag = "load,extends,endblock"
 # - reconsider T032 and H014 once formatter is in use
 # T003 - Endblock should have name.
 # T001 - Variables should be wrapped in a whitespace.
-# H025 - Tag seems to be an orphan.
 # T002 - Double quotes should be used in tags. (makes using tags in attributes hard)
 # H013 - Img tag should have an alt attribute.
 # H006 - Img tag should have height and width attributes.
 # H021 - Inline styles should be avoided.
 # H031 - Consider adding meta keywords.
-ignore = "T003,H014,T032,T002,H013,T001,H025,H006,H021,H031"
+ignore = "T003,H014,T032,T002,H013,T001,H006,H021,H031"
 indent = 2
 max_attribute_length = 80
 max_blank_lines = 2
@@ -302,7 +301,7 @@ profile = "django"
 # Mail templates need inline CSS
 "weblate/templates/mail/base.html" = "H030"
 # Test file
-"weblate/trans/tests/data/cs.html" = "H005,H007"
+"weblate/trans/tests/data/cs.html" = "H005,H007,H016,H030"
 
 [tool.mypy]
 check_untyped_defs = true
