docs: add trademark policy

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -40,7 +40,7 @@ precedence = "aggregate"
 [[annotations]]
 SPDX-FileCopyrightText = "Michal Čihař <michal@weblate.org>"
 SPDX-License-Identifier = "GPL-3.0-or-later"
-path = ["weblate/static/widget-images/**.png", "weblate/static/weblate**.svg", "weblate/static/weblate**.png", "weblate/static/logo-**.png", "weblate/static/access/**.svg", "weblate/static/email-logo**.png", "weblate/static/favicon.ico"]
+path = ["weblate/static/widget-images/**.png", "weblate/static/weblate**.svg", "weblate/static/weblate**.png", "weblate/static/logo-**.png", "weblate/static/access/**.svg", "weblate/static/email-logo**.png", "weblate/static/favicon.ico", "docs/images/logo-text.svg"]
 precedence = "aggregate"
 
 [[annotations]]
