--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@sentry/browser": "8.36.0",
+    "@tarekraafat/autocomplete.js": "10.2.7",
     "jquery": "3.7.1",
     "tributejs": "5.1.3"
   },
