--- a/.github/workflows/fossa.yml
+++ b/.github/workflows/fossa.yml
@@ -14,7 +14,7 @@ permissions:
 
 jobs:
   fossa-scan:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: ${{ github.repository == 'WeblateOrg/weblate' }}
     steps:
     - name: Checkout Code
