feat: use PEP 735 for devel deps
Use PEP 735 dependency groups for development dependencies.

--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -51,11 +51,9 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.12'
-    - name: Install dependencies
-      run: ./ci/pip-install mypy
 
     - name: Run mypy
-      run: mypy --show-column-numbers weblate > mypy.log
+      run: uv run --group types mypy --show-column-numbers weblate > mypy.log
       # Temporary hack until we have this fully working
       continue-on-error: true
     - name: Report mypy
