--- a/.github/workflows/migrations.yml
+++ b/.github/workflows/migrations.yml
@@ -73,8 +73,8 @@ jobs:
       run: ./ci/run-migrate 5.8
     - name: Coverage
       run: |
-        coverage combine
-        coverage xml
+        uv run coverage combine
+        uv run coverage xml
     - uses: codecov/codecov-action@v4
       with:
         token: ${{secrets.CODECOV_TOKEN}}
