--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -91,27 +91,27 @@ jobs:
     - name: Prepare database
       run: ./ci/prepare-database
     - name: Compile MO files
-      run: coverage run ./manage.py compilemessages
+      run: uv run coverage run ./manage.py compilemessages
     - name: Collect static files
-      run: coverage run ./manage.py collectstatic --noinput --verbosity 0
+      run: uv run coverage run ./manage.py collectstatic --noinput --verbosity 0
     - name: Migrate database
-      run: coverage run ./manage.py migrate --noinput --traceback
+      run: uv run coverage run ./manage.py migrate --noinput --traceback
     - name: Django checks
-      run: coverage run ./manage.py check
+      run: uv run coverage run ./manage.py check
     - name: Demo import
-      run: coverage run ./manage.py import_demo
+      run: uv run coverage run ./manage.py import_demo
     - name: Test with Django
       run: |
-        pytest --junitxml=junit.xml --cov=weblate weblate
+        uv run --all-extras pytest --junitxml=junit.xml --cov=weblate weblate
         cp .coverage .coverage.pytest
     - name: Test wsgi startup
       env:
         PYTHONPATH: .
-      run: coverage run weblate/wsgi.py
+      run: uv run coverage run weblate/wsgi.py
     - name: Coverage
       run: |
-        coverage combine
-        coverage xml
+        uv run coverage combine
+        uv run coverage xml
     - uses: codecov/codecov-action@v4
       with:
         token: ${{secrets.CODECOV_TOKEN}}
