--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,52 @@ requires = [
   "translate-toolkit"
 ]
 
+[dependency-groups]
+dev = [
+  "django-debug-toolbar==4.4.6",
+  "PyICU==2.14",
+  "reuse==4.0.3",
+  "scour==0.38.2",
+  "tinyunicodeblock==1.3",
+  {include-group = "lint"},
+  {include-group = "test"},
+  {include-group = "types"}
+]
+lint = [
+  {include-group = "pylint"},
+  {include-group = "pre-commit"}
+]
+pre-commit = [
+  "pre-commit==4.0.1"
+]
+pylint = [
+  "pylint==3.3.1"
+]
+test = [
+  "coverage==7.6.4",
+  "pytest==8.3.3",
+  "pytest-cov==6.0.0",
+  "pytest-django==4.9.0",
+  "responses==0.25.3",
+  "respx==0.21.1",
+  "selenium==4.26.1"
+]
+types = [
+  "boto3-stubs==1.35.54",
+  "celery-types==0.22.0",
+  "django-stubs-ext==5.1.1",
+  "django-stubs==5.1.1",
+  "djangorestframework-stubs==3.15.1",
+  "types-lxml==2024.9.16",
+  "mypy==1.13.0",
+  "types-dateparser==1.2.0.20240420",
+  "types-jsonschema==4.23.0.20240813",
+  "types-openpyxl==3.1.5.20241025",
+  "types-Pillow==10.2.0.20240822",
+  "types-python-dateutil==2.9.0.20241003",
+  "types-requests==2.32.0.20241016"
+]
+
 [project]
 authors = [{name = "Michal Čihař", email = "michal@weblate.org"}]
 classifiers = [
@@ -116,14 +162,6 @@ amazon = [
 antispam = [
   "python-akismet>=0.4.2,<0.5"
 ]
-dev = [
-  "weblate[all,test,lint,mypy]",
-  "django-debug-toolbar==4.4.6",
-  "PyICU==2.14",
-  "reuse==4.0.3",
-  "scour==0.38.2",
-  "tinyunicodeblock==1.3"
-]
 gerrit = [
   "git-review>=2.4.0,<2.5.0"
 ]
@@ -133,27 +171,8 @@ google = [
 ldap = [
   "django-auth-ldap>=4.6.0,<6.0.0"
 ]
-lint = [
-  "pre-commit==4.0.1",
-  "pylint==3.3.1"
-]
 mercurial = [
   "mercurial>=6.8.0,<7.0"
-]
-mypy = [
-  "boto3-stubs==1.35.54",
-  "celery-types==0.22.0",
-  "django-stubs-ext==5.1.1",
-  "django-stubs==5.1.1",
-  "djangorestframework-stubs==3.15.1",
-  "types-lxml==2024.9.16",
-  "mypy==1.13.0",
-  "types-dateparser==1.2.0.20240420",
-  "types-jsonschema==4.23.0.20240813",
-  "types-openpyxl==3.1.5.20241025",
-  "types-Pillow==10.2.0.20240822",
-  "types-python-dateutil==2.9.0.20241003",
-  "types-requests==2.32.0.20241016"
 ]
 mysql = [
   "mysqlclient>=2.1.1,<3"
@@ -166,15 +185,6 @@ postgres = [
 ]
 saml = [
   "python3-saml>=1.2.1"
-]
-test = [
-  "coverage==7.6.4",
-  "pytest==8.3.3",
-  "pytest-cov==6.0.0",
-  "pytest-django==4.9.0",
-  "responses==0.25.3",
-  "respx==0.21.1",
-  "selenium==4.26.1"
 ]
 zxcvbn = ["django-zxcvbn-password==2.1.1"]
 
