--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -20,4 +20,4 @@ include weblate/trans/fixtures/simple-project.json
 exclude weblate/settings.py
 prune data*
 prune dev-docker/data*
-global-exclude *.swp *.swo *.swn __pycache__ *.pyc *.pyo
+global-exclude *.swp *.swo *.swn __pycache__ *.pyc *.pyo uv.lock
