--- a/REUSE.toml
+++ b/REUSE.toml
@@ -34,7 +34,7 @@ precedence = "aggregate"
 [[annotations]]
 SPDX-FileCopyrightText = "Michal Čihař <michal@weblate.org>"
 SPDX-License-Identifier = "GPL-3.0-or-later"
-path = [".editorconfig", ".gitattributes", ".gitignore", ".gitmodules", ".imgbotconfig", ".pre-commit-config.yaml", ".pylintrc", ".readthedocs.yml", ".weblate", "MANIFEST.in", "codecov.yml", "pyproject.toml", "requirements**.txt", "dev-docker/environment", "scripts/yarn/.gitignore", "scripts/yarn/package.json", "scripts/yarn/yarn.lock", "setup.cfg", "docs/requirements.txt", "biome.json", "redocly.yaml", ".well-known/funding-manifest-urls"]
+path = [".editorconfig", ".gitattributes", ".gitignore", ".gitmodules", ".imgbotconfig", ".pre-commit-config.yaml", ".pylintrc", ".readthedocs.yml", ".weblate", "MANIFEST.in", "codecov.yml", "pyproject.toml", "requirements**.txt", "dev-docker/environment", "scripts/yarn/.gitignore", "scripts/yarn/package.json", "scripts/yarn/yarn.lock", "setup.cfg", "docs/requirements.txt", "biome.json", "redocly.yaml", ".well-known/funding-manifest-urls", "uv.lock"]
 precedence = "aggregate"
 
 [[annotations]]
