feat: add autosize library to client/ workflwo and update license information

--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@sentry/browser": "8.36.0",
     "@tarekraafat/autocomplete.js": "10.2.9",
+    "autosize": "^6.0.1",
     "jquery": "3.7.1",
     "tributejs": "5.1.3"
   },
