feat: run all tests in Docker
This makes the Docker container ready for upcoming changes during the
development.

--- a/.github/workflows/rundev.yml
+++ b/.github/workflows/rundev.yml
@@ -31,6 +31,6 @@ jobs:
     - run: ./rundev.sh start
     - run: ./rundev.sh wait
     - run: ./rundev.sh check
-    - run: ./rundev.sh test --failfast weblate.vcs
+    - run: ./rundev.sh test --failfast weblate
     - run: ./rundev.sh logs
     - run: ./rundev.sh stop
