--- a/.github/workflows/rundev.yml
+++ b/.github/workflows/rundev.yml
@@ -31,6 +31,7 @@ jobs:
     - run: ./rundev.sh start
     - run: ./rundev.sh wait
     - run: ./rundev.sh check
+    - run: ./rundev.sh compilemessages
     - run: ./rundev.sh test --failfast weblate
     - run: ./rundev.sh logs
     - run: ./rundev.sh stop
