--- a/pyproject.toml
+++ b/pyproject.toml
@@ -151,7 +151,8 @@ version = "5.9-dev"
 
 [project.optional-dependencies]
 alibaba = [
-  "aliyun-python-sdk-alimt>=3.2.0,<4.0.0"
+  "aliyun-python-sdk-alimt>=3.2.0,<4.0.0",
+  "aliyun-python-sdk-core>=2.16.0,<3.0.0"
 ]
 all = [
   "weblate[alibaba,amazon,antispam,gerrit,google,ldap,mercurial,openai,postgres,saml,zxcvbn]"
