feat(deps): include saml2idp extra
This is used on hosted service.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ pre-commit = [
 pylint = [
   "pylint==3.3.1"
 ]
+saml2idp = [
+  "djangosaml2idp==0.7.2"
+]
 test = [
   "coverage==7.6.4",
   "pytest==8.3.3",
