feat: add wllegal dependency extra

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -190,6 +190,9 @@ saml = [
 saml2idp = [
   "djangosaml2idp==0.7.2"
 ]
+wllegal = [
+  "wllegal>=2024.6"
+]
 zxcvbn = ["django-zxcvbn-password==2.1.1"]
 
 [project.readme]
