--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -29,4 +29,4 @@ jobs:
     - name: Add pylint annotator
       uses: pr-annotators/pylint-pr-annotator@v0.0.1
     - name: Run pylint
-      run: uv run --only-group pylint pylint weblate/
+      run: uv run --no-sources --only-group pylint pylint weblate/
