--- a/pyproject.toml
+++ b/pyproject.toml
@@ -190,6 +190,9 @@ saml = [
 saml2idp = [
   "djangosaml2idp==0.7.2"
 ]
+wlhosted = [
+  "wlhosted"
+]
 wllegal = [
   "wllegal>=2024.6"
 ]
@@ -530,3 +533,6 @@ zip-safe = false
 
 [tool.setuptools.packages]
 find = {namespaces = false}
+
+[tool.uv.sources]
+wlhosted = {path = "../hosted", editable = true}
