--- a/.github/workflows/migrations.yml
+++ b/.github/workflows/migrations.yml
@@ -33,6 +33,7 @@ jobs:
       CI_DB_PORT: '60000'
       CI_SELENIUM: '1'
       DJANGO_SETTINGS_MODULE: weblate.settings_test
+      UV_FROZEN: '1'
 
     steps:
     - uses: actions/checkout@v4
