chore(rundev): fix various issues
- configure uv by environment to avoid need to specify params on each invocation
- update list of apt packages
- initialize vevn on start
- avoid using chown for venv as it is performance nightmare because of
  https://github.com/docker/for-linux/issues/388

--- a/dev-docker/weblate-dev/Dockerfile
+++ b/dev-docker/weblate-dev/Dockerfile
@@ -20,6 +20,8 @@ ARG GROUP_ID=1000
 
 USER root
 ENV PATH=/app/venv/bin/:/usr/local/bin:/usr/bin:/bin:/sbin:/usr/sbin
+ENV UV_CACHE_DIR=/app/data/uv-cache
+ENV UV_LINK_MODE=copy
 # Make sure user exists in the container
 RUN if ! getent group "${GROUP_ID}"; then \
             groupadd --gid "${GROUP_ID}" developer; \
@@ -27,31 +29,34 @@ RUN if ! getent group "${GROUP_ID}"; then \
     &&  if ! getent passwd "${USER_ID}"; then \
             useradd --gid "${GROUP_ID}" --uid "${USER_ID}" --groups root,tty,weblate --shell /bin/bash developer; \
         fi
-# Following are removed during cleanup of weblate/weblate
+# Following should match what dev container in docker-base repo includes
 RUN apt-get update && apt-get install -y \
     pkg-config \
-    libmariadb-dev \
-    libxml2-dev \
-    libffi-dev \
-    libxmlsec1-dev \
-    libpq-dev \
-    gcc \
-    g++ \
-    file \
     make \
-    libsasl2-dev \
+    libcairo2-dev \
+    libxml2-dev \
     libacl1-dev \
     liblz4-dev \
     libzstd-dev \
     libxxhash-dev \
+    libmariadb-dev \
+    libxmlsec1-dev \
+    libsasl2-dev \
     libldap2-dev \
     libssl-dev \
-    libz-dev   \
-    libjpeg62-turbo-dev
-
-COPY --link --chmod=0755 start-dev /app/bin/
+    libffi-dev \
+    libpq-dev \
+    zlib1g-dev \
+    libjpeg62-turbo-dev \
+    libgirepository1.0-dev
 
 # List should match weblate/weblate
-RUN chown -R "${USER_ID}:${GROUP_ID}" /etc/nginx/sites-available/ /var/log/nginx/ /var/lib/nginx /app/data /app/cache /run /home/weblate /etc/localtime /etc/supervisor/conf.d /tmp/localtime /app/venv
+RUN chown -R "${USER_ID}:${GROUP_ID}" /etc/nginx/sites-available/ /var/log/nginx/ /var/lib/nginx /app/data /app/cache /run /home/weblate /etc/localtime /etc/supervisor/conf.d /tmp/localtime /home
+
+# Start with fresh venv
+# Using the original would work, but chown on it is super slow, see https://github.com/docker/for-linux/issues/388
+RUN rm -rf /app/venv && mkdir /app/venv && chown "${USER_ID}:${GROUP_ID}" /app/venv
+
+COPY --link --chmod=0755 start-dev /app/bin/
 
 ENTRYPOINT ["/app/bin/start-dev"]
