fix(rundev): explicitely specify CMD
Seems that it is lost during build in some setups.

--- a/dev-docker/weblate-dev/Dockerfile
+++ b/dev-docker/weblate-dev/Dockerfile
@@ -60,3 +60,4 @@ RUN rm -rf /app/venv && mkdir /app/venv && chown "${USER_ID}:${GROUP_ID}" /app/v
 COPY --link --chmod=0755 start-dev /app/bin/
 
 ENTRYPOINT ["/app/bin/start-dev"]
+CMD ["runserver"]
