chore: consistent pyproject formatting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -193,7 +193,9 @@ saml2idp = [
 wllegal = [
   "wllegal>=2024.6"
 ]
-zxcvbn = ["django-zxcvbn-password==2.1.1"]
+zxcvbn = [
+  "django-zxcvbn-password==2.1.1"
+]
 
 [project.readme]
 content-type = "text/x-rst"
