--- a/.github/workflows/yarn-update.yml
+++ b/.github/workflows/yarn-update.yml
@@ -73,7 +73,7 @@ jobs:
           dependencies
 
     - name: Enable Pull Request Automerge
-      if: github.ref == 'refs/heads/main'
+      if: github.ref == 'refs/heads/main' && steps.cpr.outputs.pull-request-operation != 'none'
       run: gh pr merge --merge --auto "${{ steps.cpr.outputs.pull-request-number }}"
       env:
         GH_TOKEN: ${{ secrets.WEBLATE_CI_TOKEN }}
