chore(ci): fix trigger condition

--- a/.github/workflows/uv-upgrade.yml
+++ b/.github/workflows/uv-upgrade.yml
@@ -10,6 +10,7 @@ on:
     branches:
     - renovate/**
     paths:
+    - pyproject.toml
     - .github/workflows/uv-upgrade.yml
   schedule:
   - cron: 30 6 * * 0
