chore(ci): fix job name

--- a/.github/workflows/uv-upgrade.yml
+++ b/.github/workflows/uv-upgrade.yml
@@ -20,7 +20,7 @@ permissions:
   contents: read
 
 jobs:
-  yarn-update:
+  uv-update:
     runs-on: ubuntu-24.04
     permissions:
       contents: write
