chore(rundev): pin base image and rely on renovate bot to update it
This is better approach than pulling it on each build.

--- a/dev-docker/weblate-dev/Dockerfile
+++ b/dev-docker/weblate-dev/Dockerfile
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-FROM weblate/weblate:bleeding
+FROM weblate/weblate:5.8.3.0
 
 ##########
 # WARNING!
