feat: add wsgi extra dep on gunicorn
Used in dev-docker.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -196,6 +196,9 @@ wlhosted = [
 wllegal = [
   "wllegal>=2024.6"
 ]
+wsgi = [
+  "gunicorn==23.0.0"
+]
 zxcvbn = [
   "django-zxcvbn-password==2.1.1"
 ]
